first trivial editor

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "flow": "flow check .",
     "checkdeps": "nsp check",
     "test": "mocha test/*.spec.js",
-    "dev": "webpack-dev-server -d",
+    "dev": "cd src; webpack-dev-server -d",
     "test:file": "mocha",
     "coverage": "nyc mocha",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
@@ -75,5 +75,9 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "algonawt": "^0.1.0",
+    "glamor": "^2.20.24",
+    "radium": "^0.18.2"
+  }
 }
