--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
-{
+  {
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "extends": [
     "eslint:recommended",
     "plugin:flowtype/recommended"
