--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "files": [
     "src",
-    "lib"
+    "lib",
+    "app"
   ],
   "scripts": {
     "eslint": "eslint src && eslint test",
@@ -18,7 +19,8 @@
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "codeclimate:coverage": "nyc npm test && nyc report --reporter=text-lcov | codeclimate-test-reporter",
     "coverage:ci": "nyc npm test && nyc report --reporter=text-lcov | coveralls && nyc report --reporter=text-lcov | codeclimate-test-reporter",
-    "build": "rm -rf lib/* && babel src -d lib --source-maps && flow-copy-source -v src lib",
+    "build:webpack": "rm -rf app/* && cd src && webpack -p",
+    "build": "rm -rf lib/* && babel src -d lib --source-maps && flow-copy-source -v src lib && npm run build:webpack",
     "doc:serve": "documentation serve src -g --document-exported -w -f html",
     "doc:lint": "documentation lint src -g",
     "doc:build": "rm -r doc/*; mv src/index.js src/index; documentation build src -g --document-exported -f html -o doc --sort-order alpha; mv src/index src/index.js",
@@ -27,10 +29,14 @@
     "checkdeps:unused": "depcheck; npm-check"
   },
   "tags": [
-    "lambda"
+    "lambda",
+    "lemming",
+    "lemming-lang"
   ],
   "keywords": [
-    "lambda"
+    "lambda",
+    "lemming",
+    "lemming-lang"
   ],
   "author": "Frederik Batuna <gobi301@gmail.com>",
   "license": "MIT",
@@ -65,6 +71,7 @@
     "flow-bin": "0.42.0",
     "flow-copy-source": "^1.1.0",
     "flow-typed": "^2.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.2",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
