--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "precommit": "npm run doc:lint && npm run eslint && npm run flow && npm run checkdeps && npm test && npm run coverage && npm run build",
     "prepublish": "npm run precommit",
     "postpublish": "npm run surge",
-    "surge": "surge app lemming",
+    "surge": "surge app lemming.surge.sh",
     "checkdeps:unused": "depcheck; npm-check"
   },
   "tags": [
